--- a/src/scss/utils/_general.scss
+++ b/src/scss/utils/_general.scss
@@ -1,14 +1,13 @@
 @import "../utils/variables";
 @import "../utils/mixins";
 
-@import url(//db.onlinewebfonts.com/c/a575313c6dc4fd00c1a9506e1c3ea4fc?family=Euclid+Circular+A);
 * {
   margin: 0;
   padding: 0;
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Euclid Circular A";
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
