--- a/src/scss/pages/_productDetails.scss
+++ b/src/scss/pages/_productDetails.scss
@@ -70,7 +70,7 @@
         }
         gap: 16px;
         overflow-x: scroll;
-        padding: 4px 0;
+        padding: 4px ;
         &::-webkit-scrollbar {
           display: none;
         }
