--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import "./layout/components/profileSidebar";
 @import "./layout/components/checkEmail";
 @import './layout/components/modalProfile';
+@import './pages/productDetailsLoading';
 //!--------------Pages----------------
 
 @import "./pages/home";
